--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.359.0",
+    "aws-sdk": "^2.1405.0",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -28,7 +28,6 @@
     "jsonwebtoken": "^9.0.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "multer-s3": "^3.0.1",
     "per-env": "^1.0.2",
     "pg": "^8.10.0",
     "sequelize": "^6.29.3",
